autognuchess-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: autognuchess 
  name: autognuchess
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: autognuchess
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: autognuchess
    spec:
      containers:
      - image: schnitz81/autognuchess
        imagePullPolicy: Always
        args: ["60"]
        name: autognuchess
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/log
          name: log-volume
      volumes:
      - name: log-volume
        hostPath:
          path: /var/log
          type: Directory
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 61
